# agent-artificial

./: .env.example  README.md  agentartificial.py  client.py  pyproject.toml  requirements.txt
agentartificial/: agent_client.py
tests/: test_agent_client.py  test_client.py
